--- a/RawToolsViz/QcDataViz.resx
+++ b/RawToolsViz/QcDataViz.resx
@@ -117,6 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>152, 17</value>
+  </metadata>
+  <data name="plotView1.ToolTip" xml:space="preserve">
+    <value>Controls:
+LeftMB - view filename and value of nearest data point
+RightMB - hold and drag to pan
+MiddleMB - hold and drag to zoom
+ctrl + RightMB - hold and drag to zoom
+ctrl + RightMB (double click) - reset zoom</value>
+  </data>
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
